[package]
name = "rts"
version = "0.1.0"
authors = ["Clement Rey <cr.rey.clement@gmail.com>"]
edition = "2018"

[dependencies]
arr_macro = "0.1"
rand = "0.7"
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
# raylib = { path = "../../deltaphc/raylib-rs/raylib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.15", default-features = false }
specs-derive = "0.4"
structopt = "0.2"
tcod = "0.15"
