[package]
name = "rts"
version = "0.1.0"
authors = ["Clement Rey <cr.rey.clement@gmail.com>"]
edition = "2018"

[features]
default = []
parallel = ["specs/parallel"]

[dependencies]
# raylib = { path = "../../deltaphc/raylib-rs/raylib" }
arr_macro = "0.1"
cgmath = "0.17"
collision = "0.20"
rand = "0.7"
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.16", default-features = false }
specs-derive = "0.4"
structopt = "0.2"
tcod = "0.15"

[patch.crates-io]
tynm = { git = "https://github.com/teh-cmc/tynm", branch = "master" }
