[package]
name = "rts"
version = "0.1.0"
authors = ["Clement Rey <cr.rey.clement@gmail.com>"]
edition = "2018"

[features]
default = []
parallel = ["specs/parallel"]

[dependencies]
anyhow = "1.0"
arr_macro = "0.1"
cgmath = "0.17"
collision = "0.20"
rand = "0.7"
# raylib = { path = "../../deltaphc/raylib-rs/raylib" }
# raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
raylib = { git = "https://github.com/teh-cmc/raylib-rs", branch = "cmc/raylib26" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.16", default-features = false, features = ["specs-derive"] }
structopt = "0.2"
tcod = "0.15"

[patch.crates-io]
tynm = { git = "https://github.com/teh-cmc/tynm", branch = "master" }
